# yaparai-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/yaparai/: __init__.py  client.py  config.py  server.py
src/yaparai/tools/: __init__.py  _org.py  ai.py  avatar.py  balance.py  chatbot.py  crm.py  ecommerce.py  edit.py  generate.py  jobs.py  models.py  organizations.py  social.py  templates.py
tests/: test_client.py  test_crm.py  test_edit.py  test_generate.py  test_org.py  test_social.py
